# blp

./: .gitignore  .nojekyll  CHANGELOG.md  CITATION.cff  README.md  environment.yml  index.html  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: create-release.yml  pypi-release.yml  release-docs.yml  testing.yml
conda-recipe/: meta.yml
doc/: Makefile
doc/source/: conf.py  index.rst  quickstart.ipynb  quickstart.py  quickstart.qmd
doc/source/usage/: quickstart.py
docs/: contributing.html  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_sources/: contributing.rst.txt  faq.rst.txt  quickstart.ipynb.txt
docs/_static/: documentation_options.js
docs/usage/: quickstart.html
hacking/: .bashrc  .dev  pyclean
src/blp/: __init__.py  blp.py
src/blp/test/: test_blp.py
