[metadata]
name = blp
version = attr: blp.__version__
url = https://github.com/matthewgilbert/blp
author_email = matthew.gilbert12@gmail.com
description = Pythonic interface for Bloomberg Open API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keyboards = Bloomberg data blpapi

[options]
zip_safe = False
python_requires = >=3.6
install_requires =
    pandas
package_dir =
    =  src
packages = find:

[options.packages.find]
where = src

[bdist_wheel]
universal=1

[build-system]
requires =
  setuptools >= 40.9.0
  wheel
build-backend = setuptools.build_meta

[pycodestyle]
max_line_length = 120
ignore = E203,W503

[isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = True

[pydocstyle]
convention = numpy
ignore = D107,D204,D213,D401

[mypy]
ignore_missing_imports = True